UI and functionalities

--- a/PBSS/fbaform/templates/fbaform/fbabase.html
+++ b/PBSS/fbaform/templates/fbaform/fbabase.html
@@ -19,6 +19,7 @@
           href="{% static 'css/our-team.css' %}">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 
     {% if title %}
         <title>Positive Behaviour - {{ title }}</title>
