--- a/PBSS/positivebehaviour/templates/positivebehaviour/base.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/base.html
@@ -19,6 +19,7 @@
           href="{% static 'css/our-team.css' %}">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <title>Positive Behaviour</title>
 </head>
 <body>
@@ -62,8 +63,6 @@
                              <li>
                                  <a class="page-scroll" href="{% url 'logout' %}">Logout</a>
                              </li>
-
-
                      </li>
                              <li>
 
@@ -135,7 +134,7 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-md-4">
-						<p>Copyright &copy; PBSS - Designed by <a href="#"></a></p>
+						<p>Copyright &copy; PBSS - Designed by Team 03<a href="#"></a></p>
 					</div>
 					<div class="col-md-4">
 						<ul class="list-inline">
