--- a/PBSS/positivebehaviour/templates/positivebehaviour/index.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/index.html
@@ -10,12 +10,10 @@
                         <div class="o-container">
 
                         </div>
-                        <div class="intro-text">
+                        <div class="intro-text"><br><br>
                             <div class="intro-lead-in">Hero Image</div>
                             <div class="intro-heading">Description</div>
                         </div>
-                        <a class="btn btn-1 btn-sm" href="#about">About Us</a>
-                        <a class="btn btn-1 btn-sm" href="#team">Our Team</a>
                     </div>
                 </div>
             </div>
@@ -52,12 +50,12 @@
                                             <h4>2009-2011</h4>
                                             <h4 class="subheading">Our Humble Beginnings</h4>
                                         </div>
-                                        <div class="timeline-body">
+                                        <div class="timeline-body"><br>
                                             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
                                         </div>
                                     </div>
                                 </li>
-                                <li class="timeline-inverted red">
+                                <li class="timeline-inverted blue">
                                     <div class="timeline-image">
                                         <img class="img-circle img-responsive" src="{% static 'images/5.jpg' %}" alt="">
                                     </div>
@@ -66,12 +64,12 @@
                                             <h4>March 2011</h4>
                                             <h4 class="subheading">An Agency is Born</h4>
                                         </div>
-                                        <div class="timeline-body">
+                                        <div class="timeline-body"><br>
                                             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
                                         </div>
                                     </div>
                                 </li>
-                                <li class="green">
+                                <li class="blue">
                                     <div class="timeline-image">
                                         <img class="img-circle img-responsive" src="{% static 'images/6.jpg' %}" alt="">
                                     </div>
@@ -80,12 +78,12 @@
                                             <h4>December 2012</h4>
                                             <h4 class="subheading">Transition to Full Service</h4>
                                         </div>
-                                        <div class="timeline-body">
+                                        <div class="timeline-body"><br>
                                             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
                                         </div>
                                     </div>
                                 </li>
-                                <li class="timeline-inverted yellow">
+                                <li class="timeline-inverted blue">
                                     <div class="timeline-image">
                                         <img class="img-circle img-responsive" src="{% static 'images/7.jpg' %}" alt="">
                                     </div>
@@ -94,7 +92,7 @@
                                             <h4>July 2014</h4>
                                             <h4 class="subheading">Phase Two Expansion</h4>
                                         </div>
-                                        <div class="timeline-body">
+                                        <div class="timeline-body"><br>
                                             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
                                         </div>
                                     </div>
@@ -112,19 +110,7 @@
                 </div>
             </section>
 
-
-
-
-        <!-- /////////////////////////////////////////Content -->
-
-
-
-
-
-
         <div id="page-content" class="index-page">
-
-            <!-- ////////////Content Box 01 -->
             <section id="services" class="box-content box-1">
                 <div class="container">
                     <div class="row heading">
@@ -136,37 +122,25 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-3 box-item">
-                            <div class="wrap-img">
-                                <img src="{% static 'images/Html.png' %}" alt="">
-                            </div>
                             <h3 class="blue">Text Heading 3</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                             <button type="submit" class="btn btn-2 ">More</button>
                         </div>
                         <div class="col-sm-3 box-item">
-                            <div class="wrap-img">
-                                <img src="{% static 'images/CSS.png' %}" alt="">
-                            </div>
-                            <h3 class="yellow">Text Heading 3</h3>
+                            <h3 class="blue">Text Heading 3</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                             <button type="submit" class="btn btn-2 ">More</button>
                         </div>
                         <div class="col-sm-3 box-item">
-                            <div class="wrap-img">
-                                <img src="{% static 'images/screen.png' %}" alt="">
-                            </div>
-                            <h3 class="red">Text Heading 3</h3>
+                            <h3 class="blue">Text Heading 3</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                             <button type="submit" class="btn btn-2 ">More</button>
                         </div>
                         <div class="col-sm-3 box-item">
-                            <div class="wrap-img">
-                                <img src="{% static 'images/Setting.png' %}" alt="">
-                            </div>
-                            <h3 class="green">Text Heading 3</h3>
+                            <h3 class="blue">Text Heading 3</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                             <button type="submit" class="btn btn-2 ">More</button>
@@ -175,7 +149,8 @@
                 </div>
             </section>
 
-            <section id="fbaform" class="box-content box-1" style="background: white;>
+    <div id="page-content" class="index-page">
+            <section id="fbaform" class="box-content box-1" style="background: white;">
                 <div class="container">
                     <div class="row heading">
                         <div class="col-lg-12">
@@ -183,9 +158,17 @@
                             <hr>
                             <div class="intro">Lorem ipsum dolor sit amet</div>
                         </div>
-                        <a class="btn btn-2 btn-sm" href="/fbaform/">Access Form</a>
                     </div>
-
+                    <div class="row">
+                        <div class="col-sm-6 box-item">
+                            <img src="{% static 'images/checklist.png' %}" alt="checklist" class="checklist">
+                        </div>
+                        <div class="col-sm-6 box-item">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                            <a class="btn btn-2 btn-sm" href="/fbaform/">Access Form</a>
+                        </div>
+                    </div>
                 </div>
             </section>
 
