--- a/PBSS/users/templates/users/login.html
+++ b/PBSS/users/templates/users/login.html
@@ -3,14 +3,24 @@
     {% load static %}
     {% load crispy_forms_tags %}
 
-    <div class="login-form">
-            <div class="row">
-                <div class="col-mt-3">
 
-        <div class="content-section">
-            <form method="POST">
+    <div id="page-content" class="index-page">
+            <section id="" class="box-content box-1" style="background: white;">
+                <div class="container">
+                    <div class="row heading">
+                        <div class="col-lg-12">
+                            <h2>Sign in</h2>
+                            <hr>
+                            <div class="intro">Lorem ipsum dolor sit amet</div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6 box-item">
+                            <img src="{% static 'images/login.png' %}" alt="checklist" class="login">
+                        </div>
+                        <div class="col-sm-6 box-item">
+                            <form method="POST">
                 {% csrf_token %}
-                <h3 class="text-center">Sign in</h3><br>
                 <fieldset class="form-group">
                     <legend class="border-bottom mb-4 "></legend>
                     {{ form|crispy }}
@@ -24,10 +34,9 @@
                 <small class="text-muted">
                     Need an account? <a class="ml-2" href="{% url 'register' %} "> Sign Up Now</a>
                 </small>
-
-            </div></div></div></div></div>
-
-
-        </div>
+            </div></div></div>
+                </div>
+            </section>
+     </div>
 
 {% endblock content %}
