--- a/PBSS/users/templates/users/register.html
+++ b/PBSS/users/templates/users/register.html
@@ -4,13 +4,23 @@
         {% load static %}
         {% load crispy_forms_tags %}
 
-            <div class="login-form">
-            <div class="row">
-                <div class="col-mt-3">
-                <div class="content-section">
-                    <form method="POST">
+     <div id="page-content" class="index-page">
+            <section id="" class="box-content box-1" style="background: white;">
+                <div class="container">
+                    <div class="row heading">
+                        <div class="col-lg-12">
+                            <h2>Sign up</h2>
+                            <hr>
+                            <div class="intro">Lorem ipsum dolor sit amet</div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6 box-item">
+                            <img src="{% static 'images/password.png' %}" alt="checklist" class="password">
+                        </div>
+                        <div class="col-sm-6 box-item">
+                            <form method="POST">
                         {% csrf_token %}
-                        <h3 class="text-center">Sign up</h3><br>
                         <fieldset class="form-group">
                             <legend class="border-bottom mb-4 "></legend>
                             {{ form| crispy }}
@@ -20,14 +30,16 @@
                             <button class="btn btn-primary btn-block" type="submit" > Sign Up </button>
                         </div>
                      </form>
-                    <div class="border-top pr-3">
+                             <div class="border-top pr-3">
                         <small class="text-muted">
                             Already have an account? <a class="ml-2" href="{% url 'login' %}"> Sign In</a>
                         </small>
                     </div>
+                        </div>
                     </div>
+
                 </div>
-            </div>
-            </div>
+            </section>
+     </div>
 
 {% endblock content %}
