--- a/PBSS/positivebehaviour/static/css/our-team.css
+++ b/PBSS/positivebehaviour/static/css/our-team.css
@@ -78,7 +78,7 @@
 }
 .cd-author .cd-author-info li:last-child {
   font-size: 12px;
-  color: #6b6b70;
+  color: black;
 }
 @media only screen and (min-width: 768px) {
   .cd-author img {
@@ -235,7 +235,7 @@
 }
 .cd-testimonials-all p {
   position: relative;
-  background: #79b6e4;
+  background: #2c51d8;
   color: #ffffff;
   padding: 2em;
   -webkit-font-smoothing: antialiased;
@@ -253,7 +253,7 @@
   height: 0;
   width: 0;
   border: 8px solid transparent;
-  border-top-color: #79b6e4;
+  border-top-color: #2c51d8;
 }
 .cd-testimonials-all .cd-author {
   text-align: left;
