--- a/PBSS/positivebehaviour/templates/positivebehaviour/index.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/index.html
@@ -263,7 +263,7 @@
                             <li>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                 <div class="cd-author">
-                                    <img src="{% static 'images/avatar-1.jpg' %}" alt="">
+                                    <img src="{% static 'images/avatar.png' %}" alt="">
                                     <ul class="cd-author-info">
                                         <li>MyName</li>
                                         <li>CEO, AmberCreative</li>
@@ -273,7 +273,7 @@
                             <li>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus ea, perferendis error repudiandae numquam dolor fuga temporibus. Unde omnis, consequuntur.</p>
                                 <div class="cd-author">
-                                    <img src="{% static 'images/avatar-2.jpg' %}" alt="">
+                                    <img src="{% static 'images/avatar.png' %}" alt="">
                                     <ul class="cd-author-info">
                                         <li>MyName</li>
                                         <li>Designer, CodyHouse</li>
@@ -283,7 +283,7 @@
                             <li>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam totam nulla est, illo molestiae maxime officiis, quae ad, ipsum vitae deserunt molestias eius alias.</p>
                                 <div class="cd-author">
-                                    <img src="{% static 'images/avatar-3.jpg' %}" alt="">
+                                    <img src="{% static 'images/avatar.png' %}" alt="">
                                     <ul class="cd-author-info">
                                         <li>MyName</li>
                                         <li>CEO, CompanyName</li>
@@ -302,7 +302,7 @@
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit totam saepe iste maiores neque animi molestias nihil illum nisi temporibus.</p>
 
                                     <div class="cd-author">
-                                        <img src="{% static 'images/avatar-1.jpg.jpg' %}" alt="">
+                                        <img src="{% static 'images/avatar.png' %}" alt="">
                                         <ul class="cd-author-info">
                                             <li>MyName</li>
                                             <li>CEO, CompanyName</li>
@@ -313,7 +313,7 @@
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore nostrum nisi, doloremque error hic nam nemo doloribus porro impedit perferendis. Tempora, distinctio hic suscipit. At ullam eaque atque recusandae modi fugiat voluptatem laborum laboriosam rerum, consequatur reprehenderit omnis, enim pariatur nam, quidem, quas vel reiciendis aspernatur consequuntur. Commodi quasi enim, nisi alias fugit architecto, doloremque, eligendi quam autem exercitationem consectetur.</p>
 
                                     <div class="cd-author">
-                                        <img src="{% static 'images/avatar-2.jpg' %}" alt="">
+                                        <img src="{% static 'images/avatar.png' %}" alt="">
                                         <ul class="cd-author-info">
                                             <li>MyName</li>
                                             <li>CEO, CompanyName</li>
@@ -324,7 +324,7 @@
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem quibusdam eveniet, molestiae laborum voluptatibus minima hic quasi accusamus ut facere, eius expedita, voluptatem? Repellat incidunt veniam quaerat, qui laboriosam dicta. Quidem ducimus laudantium dolorum enim qui at ipsum, a error.</p>
 
                                     <div class="cd-author">
-                                        <img src="{% static 'images/avatar-3.jpg' %}" alt="">
+                                        <img src="{% static 'images/avatar.png' %}" alt="">
                                         <ul class="cd-author-info">
                                             <li>MyName</li>
                                             <li>CEO, CompanyName</li>
@@ -335,7 +335,7 @@
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero voluptates officiis tempore quae officia! Beatae quia deleniti cum corporis eos perferendis libero reiciendis nemo iusto accusamus, debitis tempora voluptas praesentium repudiandae laboriosam excepturi laborum, nisi optio repellat explicabo, incidunt ex numquam. Ullam perferendis officiis harum doloribus quae corrupti minima quia, aliquam nostrum expedita pariatur maxime repellat, voluptas sunt unde, inventore.</p>
 
                                     <div class="cd-author">
-                                        <img src="{% static 'images/avatar-4.jpg' %}" alt="">
+                                        <img src="{% static 'images/avatar.png' %}" alt="">
                                         <ul class="cd-author-info">
                                             <li>MyName</li>
                                             <li>CEO, CompanyName</li>
@@ -346,7 +346,7 @@
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit totam saepe iste maiores neque animi molestias nihil illum nisi temporibus.</p>
 
                                     <div class="cd-author">
-                                        <img src="{% static 'images/avatar-5.jpg' %}" alt="">
+                                        <img src="{% static 'images/avatar.png' %}" alt="">
                                         <ul class="cd-author-info">
                                             <li>MyName</li>
                                             <li>CEO, CompanyName</li>
@@ -357,7 +357,7 @@
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis quia quas, quis illo adipisci voluptate ex harum iste commodi nulla dolor. Eius ratione quod ab!</p>
 
                                     <div class="cd-author">
-                                        <img src="{% static 'images/avatar-6.jpg' %}" alt="">
+                                        <img src="{% static 'images/avatar.png' %}" alt="">
                                         <ul class="cd-author-info">
                                             <li>MyName</li>
                                             <li>CEO, CompanyName</li>
@@ -368,7 +368,7 @@
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, dignissimos iure rem fugiat consequuntur officiis.</p>
 
                                     <div class="cd-author">
-                                        <img src="{% static 'images/avatar-6.jpg' %}" alt="">
+                                        <img src="{% static 'images/avatar.png' %}" alt="">
                                         <ul class="cd-author-info">
                                             <li>MyName</li>
                                             <li>CEO, CompanyName</li>
@@ -379,7 +379,7 @@
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At temporibus tempora necessitatibus reiciendis provident deserunt maxime sit id. Dicta aut voluptatibus placeat quibusdam vel, dolore.</p>
 
                                     <div class="cd-author">
-                                        <img src="{% static 'images/avatar-2.jpg' %}" alt="">
+                                        <img src="{% static 'images/avatar.png' %}" alt="">
                                         <ul class="cd-author-info">
                                             <li>MyName</li>
                                             <li>CEO, CompanyName</li>
@@ -390,7 +390,7 @@
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis iusto sapiente, excepturi velit, beatae possimus est tenetur cumque fugit tempore dolore fugiat! Recusandae, vel suscipit? Perspiciatis non similique sint suscipit officia illo, accusamus dolorum, voluptate vitae quia ea amet optio magni voluptatem nemo, natus nihil.</p>
 
                                     <div class="cd-author">
-                                        <img src="{% static 'images/avatar-3.jpg' %}" alt="">
+                                        <img src="{% static 'images/avatar.png' %}" alt="">
                                         <ul class="cd-author-info">
                                             <li>MyName</li>
                                             <li>CEO, CompanyName</li>
@@ -401,7 +401,7 @@
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor quasi officiis pariatur, fugit minus omnis animi ut assumenda quod commodi, ad a alias maxime unde suscipit magnam, voluptas laboriosam ipsam quibusdam quidem, dolorem deleniti id.</p>
 
                                     <div class="cd-author">
-                                        <img src="{% static 'images/avatar-4.jpg' %}" alt="">
+                                        <img src="{% static 'images/avatar.png' %}" alt="">
                                         <ul class="cd-author-info">
                                             <li>MyName</li>
                                             <li>CEO, CompanyName</li>
@@ -412,7 +412,7 @@
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At temporibus tempora necessitatibus reiciendis provident deserunt maxime sit id. Dicta aut voluptatibus placeat quibusdam vel, dolore.</p>
 
                                     <div class="cd-author">
-                                        <img src="{% static 'images/avatar-5.jpg' %}" alt="">
+                                        <img src="{% static 'images/avatar.png' %}" alt="">
                                         <ul class="cd-author-info">
                                             <li>MyName</li>
                                             <li>CEO, CompanyName</li>
@@ -422,7 +422,7 @@
                                 <li class="cd-testimonials-item">
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque tempore ipsam, eos suscipit nostrum molestias reprehenderit, rerum amet cum similique a, ipsum soluta delectus explicabo nihil repellat incidunt! Minima magni possimus mollitia deserunt facere, tempore earum modi, ea ipsa dicta temporibus suscipit quidem ut quibusdam vero voluptatibus nostrum excepturi explicabo nulla harum, molestiae alias. Ab, quidem rem fugit delectus quod.</p>
                                     <div class="cd-author">
-                                        <img src="{% static 'images/avatar-6.jpg' %}" alt="">
+                                        <img src="{% static 'images/avatar.png' %}" alt="">
                                         <ul class="cd-author-info">
                                             <li>MyName</li>
                                             <li>CEO, CompanyName</li>
