--- a/PBSS/users/templates/users/profile.html
+++ b/PBSS/users/templates/users/profile.html
@@ -8,19 +8,30 @@
             <div class="row">
                 <div class="col-mt-3">
                 <div class="content-section">
-                    <form method="POST">
-                        <div class="content-section">
-                            <div class="media">
-                                <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
-                                <div  class="media-body">
-                                    <h2 class="account-heading">{{ user.username }}</h2>
-                                    <p class="text-secondary">{{ user.email }}</p>
-                                </div>
+                    <div class="content-section">
+                        <div class="media">
+                            <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
+                            <div  class="media-body">
+                                <h2 class="account-heading">{{ user.username }}</h2>
+                                <p class="text-secondary">{{ user.email }}</p>
                             </div>
+                        </div>
                     </div>
-                     </form>
+                    <form method="POST" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <fieldset class="form-group">
+                            <legend class="border-bottom mb-4 "> Profile Information</legend>
+                            {{ u_form|crispy }}
+                            {{ p_form|crispy }}
+                        </fieldset>
 
-                    </div>
+                        <div class="form-group">
+                            <button class="btn btn-primary btn-block" type="submit" > Update </button>
+                        </div>
+                    </form>
+
+
+                </div>
                 </div>
             </div>
             </div>
