sitemap and minor changes

--- a/PBSS/positivebehaviour/templates/positivebehaviour/index.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/index.html
@@ -125,25 +125,25 @@
                             <h3 class="blue">Text Heading 3</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                            <button type="submit" class="btn btn-2 ">More</button>
+                            <button type="submit" class="btn btn-3 ">More</button>
                         </div>
                         <div class="col-sm-3 box-item">
                             <h3 class="blue">Text Heading 3</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                            <button type="submit" class="btn btn-2 ">More</button>
+                            <button type="submit" class="btn btn-3 ">More</button>
                         </div>
                         <div class="col-sm-3 box-item">
                             <h3 class="blue">Text Heading 3</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                            <button type="submit" class="btn btn-2 ">More</button>
+                            <button type="submit" class="btn btn-3 ">More</button>
                         </div>
                         <div class="col-sm-3 box-item">
                             <h3 class="blue">Text Heading 3</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                            <button type="submit" class="btn btn-2 ">More</button>
+                            <button type="submit" class="btn btn-3 ">More</button>
                         </div>
                     </div>
                 </div>
@@ -166,7 +166,7 @@
                         <div class="col-sm-6 box-item">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                            <a class="btn btn-2 btn-sm" href="/fbaform/">Access Form</a>
+                            <a class="btn btn-3 btn-sm" href="/fbaform/">Access Form</a>
                         </div>
                     </div>
                 </div>
@@ -182,18 +182,13 @@
                     <div class="container-fluid">
                         <div class="row">
                     <div class="col text-center">
-                        <a class="btn btn-1 btn-sm" href="{% url 'register' %}">Signup</a>
+                        <a class="btn btn-1 btn-sm" href="{% url 'register' %}" style="margin-right: 5%;">Signup</a>
                         <a class="btn btn-1 btn-sm" href="{% url 'login' %}">Signin</a>
                     </div></div>
                     </div>
                 </div>
             </section>
-            <!-- ////////////Content Box 03 -->
 
-            <!-- ////////////Content Box 04 -->
-
-
-            <!-- ////////////Content Box 05 -->
             <section class="box-content box-5" id="contact" style="background:white;" >
                 <div class="container">
                     <div class="row heading">
