--- a/PBSS/users/templates/users/register.html
+++ b/PBSS/users/templates/users/register.html
@@ -18,7 +18,7 @@
                         <div class="col-sm-6 box-item">
                             <img src="{% static 'images/password.png' %}" alt="checklist" class="password">
                         </div>
-                        <div class="col-sm-6 box-item">
+                        <div class="col-sm-6 box-item" style="text-align: left;">
                             <form method="POST">
                         {% csrf_token %}
                         <fieldset class="form-group">
