--- a/PBSS/freefbaform/templates/freefbaform/freefbaform.html
+++ b/PBSS/freefbaform/templates/freefbaform/freefbaform.html
@@ -2,42 +2,44 @@
 {% block content %}
         {% load static %}
 
- <div class="profile-form">
-            <form class="my-2 my-lg-0" method="POST">
-                {% csrf_token %}
-                <h3 class="text-center">FBA Form</h3><br>
-                <fieldset class="form-group">
-                <div class="row">
-                    <input type="text" class="form-control input-lg" name="item" id="name" placeholder="Enter Behaviour" required="required" />
-                    <button type="submit" class="btn btn-3 btn-block" name="btnadd" id="btnadd">Add</button>
-        <br>
-                {%  if messages %}
-                {%  for message in messages %}
-                    <div class = "alert alert-warning alert-dismissable" role="alert">
-                        <button class="close" data-dismiss="alert">
-                            <small><sup>x</sup></small>
-                        </button>
+     <div id="page-content" class="index-page">
+                <section id="" class="box-content box-1" style="background: white;">
+                    <div class="container">
+                        <div class="row heading">
+                        <div class="col-lg-12">
+                            <h2>FBA form</h2>
+                            <hr>
+                            <div class="intro">Lorem ipsum dolor sit amet</div>
+                        </div>
                     </div>
-                {% endfor %}
-                {% endif %}
-            {% if all_items %}
-                 <table class="table table-bothered">
-                {% for things in all_items %}
-                    {% if things.completed %}
-                        <tr class="table-secondary">
-                            <td><a href="{% url 'edit' things.id %}">{{ things.item }}</a></td>
-                          <td><a href="{% url 'delete' things.id %}">Delete</a></td>
-                        </tr>
-                    {% else %}
-                        <tr>
-                            <td><a href="{% url 'edit' things.id %}">{{ things.item }}</a></td>
-                        <td><a href="{% url 'delete' things.id %}">Delete</a></td>
-                        </tr>
-                    {% endif %}
-            {% endfor %}
-                </table>
-            {% endif %}
-                </div>
-                </fieldset></form>
-    </div>
+                        <div class="row">
+                            <div class="col-sm-4 box-item">
+                                <div class="col-lg-12"><br><br>
+                                <h2>Behaviour</h2>
+                                <hr>
+                            </div>
+                            </div>
+                            <div class="col-sm-4 box-item">
+                                <div class="col-lg-12"><br><br>
+                                <h2>Anticident</h2>
+                                <hr>
+                            </div>
+                            </div>
+                            <div class="col-sm-4 box-item">
+                                  <div class="col-lg-12"><br><br>
+                                <h2>Consequences</h2>
+                                <hr>
+                            </div>
+                            </div>
+                        <script>
+                                function myFunction() {
+                                window.print();
+                                }
+                                </script>
+                        </div>
+                        <button class="btn btn-3 btn-sm" onclick="myFunction()" name="print" id="print" style="float: right;">Print</button>
+                    </div>
+                </section>
+     </div>
+
 {% endblock content %}
