--- a/PBSS/positivebehaviour/templates/positivebehaviour/sitemap.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/sitemap.html
@@ -2,5 +2,23 @@
 {% block content %}
         {% load static %}
 
-
+      <div id="page-content" class="index-page">
+                <section id="" class="box-content box-1" style="background: white;">
+                    <div class="container">
+                        <div class="row heading">
+                        <div class="col-lg-12">
+                            <h2>Sitemap</h2>
+                            <hr>
+                        </div>
+                    </div>
+                        <div class="row">
+                            <div class="col-sm-12 box-item" style="text-align: left">
+                                <div class="col-lg-12"><br><br>
+                                    <!-- add ul/ol here -->
+                            </div>
+                            </div>
+                    </div>
+                    </div>
+                </section>
+     </div>
 {% endblock content %}
